--- a/index.html
+++ b/index.html
@@ -6,11 +6,18 @@
         <script src="mobileContextMenu.js"></script>
     </head>
 
-    <button id="_button">show menu</button>
+    <button id="_button" width="100px" height="50px">show menu</button>
     <script>
         document.getElementById('_button').addEventListener('click', ev => {
             mobileContextMenu.show();
         });
     </script>
+    <style>
+        #_button {
+            width: 100%;
+            height: 300px;
+            font-size: 20pt;
+        }
+    </style>
 
 </html>
